@@ -35,5 +35,10 @@ assemblyMergeStrategy in assembly := {
     val oldStrategy = (assemblyMergeStrategy in assembly).value
     oldStrategy(x)
 }
+fork in Test := true
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+parallelExecution in Test := false
 
-libraryDependencies ++= Seq("org.scalatest" %% "scalatest" % "3.2.2" % Test) ++ spark
+libraryDependencies ++= Seq("org.scalatest" %% "scalatest" % "3.2.2" % Test,
+  "com.holdenkarau" %% "spark-testing-base" % "3.0.0_0.14.0" % Test
+) ++ spark
